src/test/resources/valid_tests/SimpleNetworkSigmoid.cnna
architecture SimpleNetworkSigmoid{
    def input in
    def output out
    
    in ->
    fullyConnected(units=64, no_bias=true)
    activation.tanh()
    output {
        fullyConnected(no_bias=true)
        activation.sigmoid()
    } -> out
}