src/test/resources/invalid_tests/WrongActivationType.cnna
architecture WrongActivationType {
    def input in
    def output out
    
    in ->
    fullyConnected(units=64)
    activation.maxs()
    output{
        fullyConnected()
    } -> out
}